[gd_scene format=3 uid="uid://duobaf2jhr12x"]

[ext_resource type="Script" uid="uid://dxpcevvxroou6" path="res://ene_dyn/ene_dyn_zombie.gd" id="1_i41lq"]
[ext_resource type="Texture2D" uid="uid://hb1ai204tn2k" path="res://ene_dyn/img/Walk (1).png" id="2_fxd75"]
[ext_resource type="Texture2D" uid="uid://cd5ah2fml77xk" path="res://ene_dyn/img/Walk (2).png" id="3_63ct3"]
[ext_resource type="Texture2D" uid="uid://gc6wiqds4jmr" path="res://ene_dyn/img/Walk (3).png" id="4_ckt0r"]
[ext_resource type="Texture2D" uid="uid://g8dtwjr2eaxw" path="res://ene_dyn/img/Walk (4).png" id="5_uk5jp"]
[ext_resource type="Texture2D" uid="uid://cp53lh6w40qvd" path="res://ene_dyn/img/Walk (5).png" id="6_jgl7y"]
[ext_resource type="Texture2D" uid="uid://cfgq235ncqw2m" path="res://ene_dyn/img/Walk (6).png" id="7_vas0k"]
[ext_resource type="Texture2D" uid="uid://btanedvrhvqlo" path="res://ene_dyn/img/Walk (7).png" id="8_g5evj"]
[ext_resource type="Texture2D" uid="uid://cvlyaqyk4qk75" path="res://ene_dyn/img/Walk (8).png" id="9_t4vkq"]
[ext_resource type="Texture2D" uid="uid://ch1pf244rdqns" path="res://ene_dyn/img/Walk (9).png" id="10_ugewe"]
[ext_resource type="Texture2D" uid="uid://6ne8gtfuukeg" path="res://ene_dyn/img/Walk (10).png" id="11_1o5ve"]

[sub_resource type="SpriteFrames" id="SpriteFrames_65vyn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_fxd75")
}, {
"duration": 1.0,
"texture": ExtResource("3_63ct3")
}, {
"duration": 1.0,
"texture": ExtResource("4_ckt0r")
}, {
"duration": 1.0,
"texture": ExtResource("5_uk5jp")
}, {
"duration": 1.0,
"texture": ExtResource("6_jgl7y")
}, {
"duration": 1.0,
"texture": ExtResource("7_vas0k")
}, {
"duration": 1.0,
"texture": ExtResource("8_g5evj")
}, {
"duration": 1.0,
"texture": ExtResource("9_t4vkq")
}, {
"duration": 1.0,
"texture": ExtResource("10_ugewe")
}, {
"duration": 1.0,
"texture": ExtResource("11_1o5ve")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i41lq"]
size = Vector2(75.3125, 134.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fxd75"]
size = Vector2(91, 142.75)

[node name="ene_dyn_zombie" type="CharacterBody2D" unique_id=1577931280]
position = Vector2(-1, 0)
script = ExtResource("1_i41lq")

[node name="ani_ene_dyn" type="AnimatedSprite2D" parent="." unique_id=951761080]
position = Vector2(1087.1563, 563.495)
scale = Vector2(0.24628122, 0.2725521)
sprite_frames = SubResource("SpriteFrames_65vyn")

[node name="col_ene_dyn" type="CollisionShape2D" parent="." unique_id=1142445750]
position = Vector2(1090.6563, 572.25)
shape = SubResource("RectangleShape2D_i41lq")

[node name="ene_area" type="Area2D" parent="." unique_id=1679339518]
position = Vector2(140, -13)

[node name="col_ene_dyn_ataque" type="CollisionShape2D" parent="ene_area" unique_id=1270871485]
position = Vector2(947.5, 582.375)
shape = SubResource("RectangleShape2D_fxd75")

[node name="detectorIzquierdo" type="RayCast2D" parent="." unique_id=1324577196]
position = Vector2(1041, 503)
target_position = Vector2(-2, 141)

[node name="detectorDerecho" type="RayCast2D" parent="." unique_id=887416122]
position = Vector2(1135, 503)
target_position = Vector2(1, 150)

[connection signal="body_entered" from="ene_area" to="." method="_on_ene_area_body_entered"]
